@@ -6,6 +6,7 @@ xine-lib (1.1.16) 2008-??-??
   * Fix timing issues (broken audio) on mingw.
   * Add ID3 tag TDRC to replace/complement the deprecated tag TYER.
   * Add a new meta-tag, "Composer", and use it in the FLAC demuxer.
+  * Correct aac channel ordering for multi-channel audio
 
 xine-lib (1.1.15) 2008-08-14
   * Security fixes:
